# pomerium-config-generator

./: .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum
cmd/pomerium-config-generator/: BUILD.bazel  main.go
pkg/policy/: BUILD.bazel  config.go
pkg/team/: BUILD.bazel  team.go
pkg/template/: BUILD.bazel  concat.go
testdata/: config.yaml.tmpl  output.yaml  policy.yaml  team.yaml
