load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/lifememoryteam/pomerium-config-generator/pkg/policy",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/team:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
